[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/robot.png" type="Texture" id=1]
[ext_resource path="res://Actors/Robot.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/action_button.tres" type="SpriteFrames" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "robot",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true
radius = 32.0156

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 28, 28 )

[node name="Robot" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="RobotSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "robot"
frame = 1

[node name="BoxDetector" type="Area2D" parent="RobotSprite"]
position = Vector2( 0, -64 )

[node name="BoxDetectorShape" type="CollisionShape2D" parent="RobotSprite/BoxDetector"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="ActionButton" type="AnimatedSprite" parent="."]
position = Vector2( -64, -64 )
frames = ExtResource( 3 )
frame = 3
playing = true

[connection signal="body_entered" from="RobotSprite/BoxDetector" to="." method="_on_BoxDetector_body_entered"]
[connection signal="body_exited" from="RobotSprite/BoxDetector" to="." method="_on_BoxDetector_body_exited"]
